@@ -10,6 +10,7 @@ Core - General
   - Improve the CmsModuleInfo class such that if the module class file is newer it will be loaded.
   - Now generate the moduleinfo.ini file automatically on intall or upgrade of a module.
   - Increase the maxlength attribute for password input boxes in myaccount.
+  - Adds a StartsWith javascript shiv for IE11.
 
 CmsJobManager v0.1.1
   - Optimization of audit logging.
